app/assets/stylesheets/components/_event.scss
.event-index-main-container {
  // border: 2px solid blue;
  color: white;
  font-size: 30px;
  // font-family: 'Source Sans Pro'
  font-family: 'Quicksand', sans-serif;
}

.event-index-cover {
  // border: 2px solid yellow;
  width: 100%;
  height: 400px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  background: grey;

  // display: flex;
  // align-items: center;
  // flex-wrap: wrap;

  .event-cover-img {
    overflow: hidden;
    position: relative;
    width: 100%;
    height: 400px;
    display: flex;
    align-items: center;
    // background-size: cover;
    // background-position: center;
    justify-content: center;
  }

  h1 {
    position: absolute;
    left: 0;
    top: 40%;
    right: 0;
    z-index: 1;
    font-size: 60px;
    text-transform: uppercase;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }


  img {
    opacity: 0.5;
  }

}


.event-index-container {
  // border: 2px solid green;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  font-size: 18px;
  margin: 33px 0;
}

.event-index {
  border: 2px solid lightgrey;
  margin: 40px;
  padding: 20px;
  // width: 347px;
  width: 294px;
  height: auto;
  background: ghostwhite;
  color: gray;
  // box-shadow: 0 4px 9px rgba(0,0,0,.4);
  border-radius: 4px;

  .event-index-card {
    // display: flex;
    // flex-direction: column;
    // position: relative;

    .event-index-top {
      display: flex;
      flex-direction: row;
      // position: relative;

      .event-index-datetime {
        // border: 4px solid #90aebd;
        border-radius: 4px;
        text-align: center;
        font-size: 20px;
        width: 81%;
        height: auto;
        position: relative;
        // float: left;
//
        .date {
          font-size: 16px;
          font-weight: bold;
          text-transform: uppercase;
        }

        .time {
          font-size: 30px;
          color: black;
        }

      }

      .event-index-profile {
        width: 50%;
        height: auto;
        position: relative;
        // float: right;

          h2 {
            font-size: 12px;
            margin: 0 0;
            position: absolute;
            // left: 19px;
            // bottom: 29px;
            left: 20%;
            bottom: 31%;
          }

          img {
            display: block;
            // width: 100%;
            width: 96%;
            height: auto;
            left: 8px;
            bottom: 20px;
            // left: 7px;
            // bottom: 30px;

            position: absolute;
            padding: 4px 4px 27px;
            border-radius: 7px;
            border: 4px solid #90aebd;
            background: ghostwhite;
          }
        // }

      }

    }

    li {
      padding: 9px 0;
    }

    .event-index-main-title {
      font-size: 20px;
      font-weight: bold;
      text-align: center;
      margin-top: 12px;
    }
    .event-index-bottom {

      .seats {
        font-weight: bold;
        color: #00bf9f;
        margin-bottom: 7px;
      }

      .event-index-seats {
      }

      .join-unjoin-button {
        border: 1px solid grey;
        padding: 5px 61px;
        display: flex;
        justify-content: center;
        cursor: pointer;
        background: green;
        border-radius: 7px;
        background: #90aebd;
        color: white;

        button {
          text-align: center;
        }
      }
      .join-unjoin-button:hover {
        background: none;
        color: grey;
        border: 3px solid grey;

      }
    }
  }
}

.address {
  font-size: 17px;
}

.event-index-header {
  text-align: center;
  padding: 80px 0;
  background: #003C32;
  // background: #0E5146;
  // color: #355161 darkblue;
}

.event-nav-links {
  display: flex;
  align-items: center;;
  justify-content: space-between;;
  flex-direction: row;
  margin: 30px 30px;
  font-size: 15px;
  text-transform: uppercase;

  a {
    border: 1px solid gray;
    padding: 10px 18px;
    background: #91999A;
    cursor: pointer;
    border-radius: 7px;
    font-size: 18px;
    opacity: 0.8;
    filter: alpha(opacity=50)
  }

  a:hover {
    opacity: 1.0;
    filter: alpha(opacity=100)

  }
}

.dashboard-title {
  font-size: 22px;
  border-bottom: 1px solid grey;
}

.dashboard-seats {
  font-size: 15px;
}

